Exploratory Data Analysis 01 - Finished

--- a/exploratory-data-analysis/concept1_sagemaker_studio/starter/01_exercise_starter.ipynb
+++ b/exploratory-data-analysis/concept1_sagemaker_studio/starter/01_exercise_starter.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3fd73019-4f06-46e9-9361-e2bb991edce0",
    "metadata": {},
    "source": [
     "# Exercise: Using Sagemaker Studio for EDA in Pandas"
@@ -15,7 +14,6 @@
     }
    },
    "cell_type": "markdown",
-   "id": "c6de78a8-d27e-4621-b82e-3821401c9387",
    "metadata": {},
    "source": [
     "![dylan-ferreira-0cv08T71zL0-unsplash.jpg](attachment:3eb66929-d149-4d1d-8043-7815d55f1e7e.jpg)"
@@ -23,7 +21,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e44cacfc-26e6-4627-90ba-e5c9b4453ad5",
    "metadata": {},
    "source": [
     "You are the happy owner of Yum Yum Ice Cream. After the last two days of amazing sales, you decided to see if you can gain any insights into your ice cream sales. Please provide the data metrics below:\n",
@@ -36,8 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "beb2329c-e788-49eb-a9bb-92dc60bdd52e",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9cbb7cd5-fc64-48ef-918c-76baca199f34",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,32 +67,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27dc9a4d-711a-49f2-86c5-378516686b76",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Given the dataset below, please create a pandas dataframe.\n",
-    "df = ?"
+    "df = pd.DataFrame(data = dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d6232141-133a-4561-a917-bb50240a2ec3",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Output the dataframe to a csv for backup.\n",
-    "df.?"
+    "df.to_csv(\"dataset.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ad7db6ab-031b-474f-83fb-9111d3eb78c7",
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>ice_cream_type</th>\n",
+       "      <th>topping</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date  ice_cream_type  topping  location\n",
+       "0  2021-01-01               1        1         1\n",
+       "1  2021-01-01               2        1         2\n",
+       "2  2021-01-01               1        2         2\n",
+       "3  2021-01-01               3        1         1\n",
+       "4  2021-01-01               1        2         2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Always good to make sure your data look correct\n",
     "df.head()"
@@ -105,43 +178,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "158d3909-49a3-40af-82fa-a7dcd15199ea",
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ice_cream_type</th>\n",
+       "      <th>topping</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "      <td>14.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1.785714</td>\n",
+       "      <td>1.785714</td>\n",
+       "      <td>1.571429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.892582</td>\n",
+       "      <td>0.801784</td>\n",
+       "      <td>0.513553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2.750000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       ice_cream_type    topping   location\n",
+       "count       14.000000  14.000000  14.000000\n",
+       "mean         1.785714   1.785714   1.571429\n",
+       "std          0.892582   0.801784   0.513553\n",
+       "min          1.000000   1.000000   1.000000\n",
+       "25%          1.000000   1.000000   1.000000\n",
+       "50%          1.500000   2.000000   2.000000\n",
+       "75%          2.750000   2.000000   2.000000\n",
+       "max          3.000000   3.000000   2.000000"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Output basic statistical metrics (count, mean, std, min, max, and percentiles.\n",
-    "?"
+    "df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab52b131-3a9a-4c1b-b456-58873ce9b3c3",
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ice_cream_type</th>\n",
+       "      <th>topping</th>\n",
+       "      <th>location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ice_cream_type</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.145874</td>\n",
+       "      <td>-0.215758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>topping</th>\n",
+       "      <td>0.145874</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.507072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>location</th>\n",
+       "      <td>-0.215758</td>\n",
+       "      <td>0.507072</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                ice_cream_type   topping  location\n",
+       "ice_cream_type        1.000000  0.145874 -0.215758\n",
+       "topping               0.145874  1.000000  0.507072\n",
+       "location             -0.215758  0.507072  1.000000"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create the correlation matrix of the 4 features.\n",
-    "?"
+    "df.corr()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f69cb83-04a6-4fc3-8e98-15c93a08e6c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a histogram plot using pandas or matplotlib.\n",
-    "?"
+    "df.hist()"
    ]
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -153,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
