--- a/machine-learning-concepts/concept1_supervised_unsupervised/starter/01_exercise_starter.ipynb
+++ b/machine-learning-concepts/concept1_supervised_unsupervised/starter/01_exercise_starter.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c9370169-316e-42c8-bb72-0ce51d00ac3d",
    "metadata": {},
    "source": [
     "# Exercise: Supervised and Unsupervised Machine Learning\n",
@@ -14,8 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8b7d7f7f-06e8-4775-a24b-f87c03c53d7b",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,24 +25,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8cec611c-08f5-4c49-927b-d4856958cd71",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load in the iris dataset\n",
-    "iris = datasets.?"
+    "iris = datasets.load_iris()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b49828d2-9312-435a-881f-f0fe4a0c363c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the iris `data` dataset as a dataframe and name the columns with `feature_names`\n",
-    "df = pd.DataFrame(?, columns=?)\n",
+    "df = pd.DataFrame(, columns=?)\n",
     "\n",
     "# Include the target as well\n",
     "df['target'] = ?"
@@ -53,7 +49,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be486873-0093-4c7e-a90a-de027a932ffe",
    "metadata": {
     "tags": []
    },
@@ -66,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "902fb344-55a1-4466-afd5-db6605723ef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +70,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c7b3e32-d7a6-4d72-a86c-29e6cdb9c521",
    "metadata": {},
    "source": [
     "## Supervised ML"
@@ -85,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26c132a4-1966-4a22-b096-b6d678ccd1cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +87,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723831d3-0a08-4b8c-bf28-b436e15c3adf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +97,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7e8ecd9-0e03-4c44-8f2d-762a16e61b33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +107,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c022e9f-7469-4d05-bb32-c8e2a3a0f95c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +116,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99cc656b-ddcf-475c-b438-543ca786504a",
    "metadata": {},
    "source": [
     "# Unsupervised ML"
@@ -136,7 +124,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c4830d0-437d-41c6-baa1-356fb4e0effb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +133,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c5facac-8284-42f9-b44f-2701385cd4c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da62abde-3a3c-40b2-8899-38fa34531072",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +153,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d124bb53-f56d-4668-9fa4-d4d6b38ab24f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03fab494-8b06-4476-9ed9-18403d73f960",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,10 +172,11 @@
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -204,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
