--- a/model-deployment-workflow/concept3_model_training_evaluation/starter/03_exercise_starter.ipynb
+++ b/model-deployment-workflow/concept3_model_training_evaluation/starter/03_exercise_starter.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cd0efdab-cdff-4a3a-b93b-36b1cdb8a37c",
    "metadata": {},
    "source": [
     "# Exercise: Model Training and Evaluation\n",
@@ -19,11 +18,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7d594dbd-6d8d-48cb-8782-f17ad6350f31",
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.7/site-packages/secretstorage/dhcrypto.py:16: CryptographyDeprecationWarning: int_from_bytes is deprecated, use int.from_bytes instead\n",
+      "  from cryptography.utils import int_from_bytes\n",
+      "/opt/conda/lib/python3.7/site-packages/secretstorage/util.py:25: CryptographyDeprecationWarning: int_from_bytes is deprecated, use int.from_bytes instead\n",
+      "  from cryptography.utils import int_from_bytes\n",
+      "Requirement already satisfied: scikit-learn in /opt/conda/lib/python3.7/site-packages (0.22.1)\n",
+      "Collecting scikit-learn\n",
+      "  Using cached scikit_learn-1.0.2-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (24.8 MB)\n",
+      "Requirement already satisfied: numpy>=1.14.6 in /opt/conda/lib/python3.7/site-packages (from scikit-learn) (1.20.3)\n",
+      "Requirement already satisfied: joblib>=0.11 in /opt/conda/lib/python3.7/site-packages (from scikit-learn) (0.14.1)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in /opt/conda/lib/python3.7/site-packages (from scikit-learn) (1.4.1)\n",
+      "Collecting threadpoolctl>=2.0.0\n",
+      "  Using cached threadpoolctl-3.1.0-py3-none-any.whl (14 kB)\n",
+      "Installing collected packages: threadpoolctl, scikit-learn\n",
+      "  Attempting uninstall: scikit-learn\n",
+      "    Found existing installation: scikit-learn 0.22.1\n",
+      "    Uninstalling scikit-learn-0.22.1:\n",
+      "      Successfully uninstalled scikit-learn-0.22.1\n",
+      "Successfully installed scikit-learn-1.0.2 threadpoolctl-3.1.0\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.0.3 is available.\n",
+      "You should consider upgrading via the '/opt/conda/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "/opt/conda/lib/python3.7/site-packages/secretstorage/dhcrypto.py:16: CryptographyDeprecationWarning: int_from_bytes is deprecated, use int.from_bytes instead\n",
+      "  from cryptography.utils import int_from_bytes\n",
+      "/opt/conda/lib/python3.7/site-packages/secretstorage/util.py:25: CryptographyDeprecationWarning: int_from_bytes is deprecated, use int.from_bytes instead\n",
+      "  from cryptography.utils import int_from_bytes\n",
+      "Requirement already satisfied: pandas in /opt/conda/lib/python3.7/site-packages (1.0.1)\n",
+      "Collecting pandas\n",
+      "  Using cached pandas-1.3.5-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.3 MB)\n",
+      "Requirement already satisfied: pytz>=2017.3 in /opt/conda/lib/python3.7/site-packages (from pandas) (2019.3)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /opt/conda/lib/python3.7/site-packages (from pandas) (1.20.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in /opt/conda/lib/python3.7/site-packages (from pandas) (2.8.1)\n",
+      "Requirement already satisfied: six>=1.5 in /opt/conda/lib/python3.7/site-packages (from python-dateutil>=2.7.3->pandas) (1.14.0)\n",
+      "Installing collected packages: pandas\n",
+      "  Attempting uninstall: pandas\n",
+      "    Found existing installation: pandas 1.0.1\n",
+      "    Uninstalling pandas-1.0.1:\n",
+      "      Successfully uninstalled pandas-1.0.1\n",
+      "Successfully installed pandas-1.3.5\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.0.3 is available.\n",
+      "You should consider upgrading via the '/opt/conda/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "/opt/conda/lib/python3.7/site-packages/secretstorage/dhcrypto.py:16: CryptographyDeprecationWarning: int_from_bytes is deprecated, use int.from_bytes instead\n",
+      "  from cryptography.utils import int_from_bytes\n",
+      "/opt/conda/lib/python3.7/site-packages/secretstorage/util.py:25: CryptographyDeprecationWarning: int_from_bytes is deprecated, use int.from_bytes instead\n",
+      "  from cryptography.utils import int_from_bytes\n",
+      "Collecting imbalanced-learn==0.7.0\n",
+      "  Using cached imbalanced_learn-0.7.0-py3-none-any.whl (167 kB)\n",
+      "Requirement already satisfied: joblib>=0.11 in /opt/conda/lib/python3.7/site-packages (from imbalanced-learn==0.7.0) (0.14.1)\n",
+      "Requirement already satisfied: numpy>=1.13.3 in /opt/conda/lib/python3.7/site-packages (from imbalanced-learn==0.7.0) (1.20.3)\n",
+      "Requirement already satisfied: scikit-learn>=0.23 in /opt/conda/lib/python3.7/site-packages (from imbalanced-learn==0.7.0) (1.0.2)\n",
+      "Requirement already satisfied: scipy>=0.19.1 in /opt/conda/lib/python3.7/site-packages (from imbalanced-learn==0.7.0) (1.4.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /opt/conda/lib/python3.7/site-packages (from scikit-learn>=0.23->imbalanced-learn==0.7.0) (3.1.0)\n",
+      "Installing collected packages: imbalanced-learn\n",
+      "Successfully installed imbalanced-learn-0.7.0\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.0.3 is available.\n",
+      "You should consider upgrading via the '/opt/conda/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
+    "!pip install --upgrade scikit-learn\n",
+    "!pip install --upgrade pandas\n",
+    "!pip install imbalanced-learn==0.7.0\n",
+    "\n",
     "import pandas as pd\n",
     "from sklearn.datasets import make_regression\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -32,8 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f88843cb-0660-42cc-9b48-57347e41b8e3",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,49 +115,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9ffee2de-2a93-4317-9c0a-4660e987849d",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the dataframe using the dataset\n",
-    "df = ?\n",
-    "df[\"target\"] = ?"
+    "df = pd.DataFrame(regression_dataset[0])\n",
+    "df[\"target\"] = regression_dataset[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ce3f98fb-4002-4cbb-a478-711eb9ac88c7",
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.039309</td>\n",
+       "      <td>-0.533254</td>\n",
+       "      <td>0.006352</td>\n",
+       "      <td>-0.130216</td>\n",
+       "      <td>-0.672371</td>\n",
+       "      <td>-1.227693</td>\n",
+       "      <td>-1.605115</td>\n",
+       "      <td>0.313087</td>\n",
+       "      <td>1.709311</td>\n",
+       "      <td>1.486217</td>\n",
+       "      <td>-190.336109</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.906268</td>\n",
+       "      <td>1.112101</td>\n",
+       "      <td>-0.816500</td>\n",
+       "      <td>0.461619</td>\n",
+       "      <td>0.883569</td>\n",
+       "      <td>1.125719</td>\n",
+       "      <td>-0.993897</td>\n",
+       "      <td>0.999854</td>\n",
+       "      <td>-1.919401</td>\n",
+       "      <td>-1.137031</td>\n",
+       "      <td>33.264389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.334137</td>\n",
+       "      <td>0.320004</td>\n",
+       "      <td>-0.248267</td>\n",
+       "      <td>-0.317444</td>\n",
+       "      <td>0.834343</td>\n",
+       "      <td>1.381073</td>\n",
+       "      <td>0.901058</td>\n",
+       "      <td>-0.655725</td>\n",
+       "      <td>0.340868</td>\n",
+       "      <td>-1.481551</td>\n",
+       "      <td>120.287805</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.250441</td>\n",
+       "      <td>-1.215110</td>\n",
+       "      <td>-1.562450</td>\n",
+       "      <td>0.162566</td>\n",
+       "      <td>-1.630155</td>\n",
+       "      <td>-0.449801</td>\n",
+       "      <td>-1.033361</td>\n",
+       "      <td>-0.671750</td>\n",
+       "      <td>-1.331549</td>\n",
+       "      <td>-0.979638</td>\n",
+       "      <td>-472.599566</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-1.440993</td>\n",
+       "      <td>-0.388298</td>\n",
+       "      <td>-0.431737</td>\n",
+       "      <td>0.518420</td>\n",
+       "      <td>-0.405904</td>\n",
+       "      <td>-0.785488</td>\n",
+       "      <td>1.008090</td>\n",
+       "      <td>-0.695019</td>\n",
+       "      <td>1.885108</td>\n",
+       "      <td>-0.913755</td>\n",
+       "      <td>42.355214</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2         3         4         5         6  \\\n",
+       "0 -1.039309 -0.533254  0.006352 -0.130216 -0.672371 -1.227693 -1.605115   \n",
+       "1  0.906268  1.112101 -0.816500  0.461619  0.883569  1.125719 -0.993897   \n",
+       "2  0.334137  0.320004 -0.248267 -0.317444  0.834343  1.381073  0.901058   \n",
+       "3  0.250441 -1.215110 -1.562450  0.162566 -1.630155 -0.449801 -1.033361   \n",
+       "4 -1.440993 -0.388298 -0.431737  0.518420 -0.405904 -0.785488  1.008090   \n",
+       "\n",
+       "          7         8         9      target  \n",
+       "0  0.313087  1.709311  1.486217 -190.336109  \n",
+       "1  0.999854 -1.919401 -1.137031   33.264389  \n",
+       "2 -0.655725  0.340868 -1.481551  120.287805  \n",
+       "3 -0.671750 -1.331549 -0.979638 -472.599566  \n",
+       "4 -0.695019  1.885108 -0.913755   42.355214  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# `.head()` to view what the dataset looks like\n",
-    "?"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "05db4d76-f9e8-441e-8c80-5dc338d7188c",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# train: 0.8 | test: 0.2\n",
-    "df_train, df_test = ?\n",
+    "df_train, df_test = train_test_split(df, test_size = 0.2, random_state = 0)\n",
     "\n",
     "# train: 0.6 | validation: 0.2\n",
-    "df_train, df_val = ?\n",
+    "df_train, df_val = train_test_split(df_train, test_size = 0.25, random_state = 0)\n",
     "\n",
     "# Final dataset sizes: train: 0.6, validation: 0.2, text: 0.2,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fad18b68-9c2c-4375-b0f1-d6cf724a3ec7",
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train: (6000, 11)\n",
+      "Validation: (2000, 11)\n",
+      "Test: (2000, 11)\n"
+     ]
+    }
+   ],
    "source": [
     "# Output each shape to confirm the size of train/validation/test\n",
     "print(f\"Train: {df_train.shape}\")\n",
@@ -102,44 +303,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4b51585f-ca26-466c-937c-e6e092b5f1ef",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train the linear model by fitting it on the dataframe features and dataframe target\n",
-    "reg = LinearRegression().?"
+    "reg = LinearRegression().fit(df_train[list(range(10))], df_train['target'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e215a0d1-e0fa-47e7-86b3-a7b02fcc7bd1",
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9349344900971387"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Evaluate the linear model by scoring it, by default it's the metric r2.\n",
-    "reg.score(?)"
+    "reg.score(df_val[list(range(10))], df_val['target'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "19a89d02-ba16-45c5-a250-7c44ab6b4947",
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9323863267980969"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Once done optimizing the model using the validation dataset,\n",
     "# Evaluate the linear model by scoring it on the test dataset.\n",
-    "reg.score(?)"
+    "reg.score(df_test[list(range(10))], df_test['target'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (Data Science)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
   },
   "language_info": {
    "codemirror_mode": {
@@ -151,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
